Fixed pages on mobile

--- a/app/assets/stylesheets/refresh.scss
+++ b/app/assets/stylesheets/refresh.scss
@@ -260,9 +260,9 @@ input[type="color"]:focus,
     transition: all 0.9s ease-in-out 0s;
 }
 
-@media (min-width: 480px) {
+@media only screen and (min-width : 320px) {
   .home-header {
-    height: 400px;
+    height: 500px;
   }
 }
 @media (min-width: 768px) {
@@ -292,7 +292,7 @@ input[type="color"]:focus,
   }
 }
 
-@media (min-width: 480px) {
+@media only screen and (min-width : 320px) {
   .partner-header {
     height: 400px;
   }
@@ -436,4 +436,14 @@ input[type="color"]:focus,
 
 h4.panel-title {
   font-size:18px;
+}
+
+.banner {
+    padding: 100px 0;
+    color: #f8f8f8;
+    background: url(http://ironsummitmedia.github.io/startbootstrap-landing-page/img/banner-bg.jpg) no-repeat center center;
+    background-size: cover;
+}
+.content-section-a {
+    padding: 50px 0;
 }
